--- a/topic01-classes-objects/ajaxlabel.html
+++ b/topic01-classes-objects/ajaxlabel.html
@@ -10,7 +10,7 @@
 
   $.ajax({
     type: 'GET',
-    url: '//wit-ictskills-2017.github.io/programming//topic01-classes-objects/indexmoodle.html',
+    url: '//wit-hdip-comp-sci-2018.github.io/programming//topic01-classes-objects/indexmoodle.html',
     xhrFields: {
       withCredentials: false
     },
