--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ figcaption
     
 
     <div class="ui five wide column">
-      <h2>  Programming Fundamentals (Java) </h2>
+      <h2>  Programming Fundamentals </h2>
     </div>
 
     <div class="ui two wide column">
