--- a/topic01a-intro-to-processing/index.html
+++ b/topic01a-intro-to-processing/index.html
@@ -69,6 +69,11 @@ figcaption
 
   
 
+  <div class="two wide column">
+    <i class="huge grey settings icon"></i></a>
+  </div>
+
+
   <div class="ui six wide column">
     <h2>  1a: Introduction to Processing </h2>
     <div class="ui tiny blue label">
