--- a/topic02a-if-stmt-and-events/index.html
+++ b/topic02a-if-stmt-and-events/index.html
@@ -69,6 +69,11 @@ figcaption
 
   
 
+  <div class="two wide column">
+    <i class="huge grey settings icon"></i></a>
+  </div>
+
+
   <div class="ui six wide column">
     <h2>  2a: Selection and Events </h2>
     <div class="ui tiny blue label">
