--- a/topic01b-animate-your-drawings/index.html
+++ b/topic01b-animate-your-drawings/index.html
@@ -69,6 +69,11 @@ figcaption
 
   
 
+  <div class="two wide column">
+    <i class="huge grey settings icon"></i></a>
+  </div>
+
+
   <div class="ui six wide column">
     <h2>  1b: Animating your Drawings </h2>
     <div class="ui tiny blue label">
