update to video (trial)

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ figcaption
   <div class="ui six wide column">
     <h2>  Programming Fundamentals </h2>
     <div class="ui tiny blue label">
-      Colm Dunphy, Dr. Siobhan Drohan & Diarmuid O'Connor, WIT
+      Colm Dunphy, Dr. Siobhan Drohan, Diarmuid O'Connor, Dr. Frank Walsh, WIT
     </div>
   </div>
 
@@ -220,6 +220,11 @@ figcaption
             <div class="menu">
               <a class="item" href="topic01a-intro-to-processing/book-1a/index.html">
                 Lab-1a</a>
+            </div>
+          
+            <div class="menu">
+              <a class="item" href="topic01a-intro-to-processing/panelvideo/SgChbSu3j84">
+                Introduction to Processing</a>
             </div>
           
         </div>
