--- a/topic01b-animate-your-drawings/book-1b/index.html
+++ b/topic01b-animate-your-drawings/book-1b/index.html
@@ -204,7 +204,7 @@ body
       <div  class="ui tab segment lab" data-tab="PDE">
         <h1>Opening the PDE (Processing Development Environment)</h1>
 <p>Go to the directory/folder where you installed your processing app.  </p>
-<p>You should see a list of files and folders similiar to the image below:</p>
+<p>You should see a list of files and folders similar to the image below:</p>
 <p><img src="./img/01.png" alt="Processing Development Environment files"></p>
 <p>Double click in the <strong>processing</strong> application (highlighted by the red rectangle).</p>
 <p>The PDE (Processing Development Environment) should launch.</p>
