--- a/labwall.html
+++ b/labwall.html
@@ -79,7 +79,7 @@ figcaption
   <div class="ui six wide column">
     <h2>  Programming Fundamentals </h2>
     <div class="ui tiny blue label">
-      Colm Dunphy, Dr. Siobhan Drohan & Diarmuid O'Connor, WIT
+      Colm Dunphy, Dr. Siobhan Drohan, Diarmuid O'Connor, Dr. Frank Walsh, WIT
     </div>
   </div>
 
