--- a/topic01b-animate-your-drawings/book-1b/index.html
+++ b/topic01b-animate-your-drawings/book-1b/index.html
@@ -424,9 +424,9 @@ rect(xCoordinate, yCoordinate, 80,80);</code></pre>
 
 
 
-    <footer>
+    <!--<footer>-->
 
-    </footer>
+    <!--</footer>-->
     <script>
       $(document).ready(function() {
   $('img').addClass('ui image');
