--- a/panelvideowall.html
+++ b/panelvideowall.html
@@ -210,7 +210,7 @@ figcaption
                 
   <div class="ui segment container">
     <h3 class="ui top attached header">
-      <a href="https://youtu.be/4uMCr3cGe-Y"  target="_blank"> <i class="video icon"></i>Introduction to Processing </a>
+      <a href="https://youtu.be/4uMCr3cGe-Y"  target="_blank"> <i class="video icon"></i>1a: Introduction to Processing </a>
     </h3>
     <div class="ui attached segment ">
       <div class="ui embed" data-source="youtube" data-id="4uMCr3cGe-Y"></div>
@@ -223,7 +223,7 @@ figcaption
                 
   <div class="ui segment container">
     <h3 class="ui top attached header">
-      <a href="https://youtu.be/dFtO-cMhOek"  target="_blank"> <i class="video icon"></i>Animate Your Drawings </a>
+      <a href="https://youtu.be/dFtO-cMhOek"  target="_blank"> <i class="video icon"></i>1b: Animate Your Drawings </a>
     </h3>
     <div class="ui attached segment ">
       <div class="ui embed" data-source="youtube" data-id="dFtO-cMhOek"></div>
