--- a/topic01b-animate-your-drawings/indexmoodle.html
+++ b/topic01b-animate-your-drawings/indexmoodle.html
@@ -176,7 +176,7 @@ figcaption
   <div class="center aligned content">
     <div class="right floated meta"><i class="huge  film 
     icon"></i></div>
-    <div class="header"> Animate Your Drawings</div>
+    <div class="header"> 1b: Animate Your Drawings</div>
 
   </div>
 
