--- a/topic01a-intro-to-processing/book-1a/index.html
+++ b/topic01a-intro-to-processing/book-1a/index.html
@@ -460,9 +460,9 @@ ellipse(250,130,25,25);</code></pre>
 
 
 
-    <footer>
+    <!--<footer>-->
 
-    </footer>
+    <!--</footer>-->
     <script>
       $(document).ready(function() {
   $('img').addClass('ui image');
