--- a/topic02a-if-stmt-and-events/book/index.html
+++ b/topic02a-if-stmt-and-events/book/index.html
@@ -656,9 +656,9 @@ void draw() {
 
 
 
-    <footer>
+    <!--<footer>-->
 
-    </footer>
+    <!--</footer>-->
     <script>
       $(document).ready(function() {
   $('img').addClass('ui image');
