--- a/topic02b-iteration-for-while/book/index.html
+++ b/topic02b-iteration-for-while/book/index.html
@@ -512,9 +512,9 @@ while ( i &lt; 4 ) {
 
 
 
-    <footer>
+    <!--<footer>-->
 
-    </footer>
+    <!--</footer>-->
     <script>
       $(document).ready(function() {
   $('img').addClass('ui image');
