--- a/topic00b-induction/book-induction/index.html
+++ b/topic00b-induction/book-induction/index.html
@@ -568,9 +568,9 @@ body
 
 
 
-    <footer>
+    <!--<footer>-->
 
-    </footer>
+    <!--</footer>-->
     <script>
       $(document).ready(function() {
   $('img').addClass('ui image');
