--- a/topic02a-if-stmt-and-events/book/index.html
+++ b/topic02a-if-stmt-and-events/book/index.html
@@ -13,7 +13,7 @@
      <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/languages/java.min.js"></script>
      <script>hljs.initHighlightingOnLoad();</script>
    </head>
-  <body class="uk-background-mute">
+  <body class="uk-background-muted">
     
 
   <style>
@@ -59,7 +59,7 @@ h3
     <nav class="uk-navbar-container" uk-navbar>
       <div class="uk-subnav-left">
         <ul class="uk-background-secondary uk-subnav-pill uk-subnav-divider">
-          <li class="uk-active"><a href="../index.html"> 2a: Selection and Events</a></li>
+          <li class="uk-active"><a href="../index.html"> 2a: Selection and Events </a></li>
         </ul>
       </div>
       <div class="uk-navbar-right">
