updated array-recap note in topic07

--- a/index.html
+++ b/index.html
@@ -1034,7 +1034,7 @@
     
   
     <div class="uk-card-footer">
-      <p> <p>IntelliJ · Java Virtual Machine (JVM) · main method · Scanner · OO recap</p>
+      <p> <p>IntelliJ · Java Virtual Machine (JVM) · main method · Scanner · OO recap · Array recap</p>
 </p>
     </div>
   
