a few small tweaks

--- a/topic07-IntelliJ-JVM-and-IO/book-a-setup-intellij/index.html
+++ b/topic07-IntelliJ-JVM-and-IO/book-a-setup-intellij/index.html
@@ -265,7 +265,7 @@ body
             <div  class="ui tab segment lab" data-tab="01">
               <h1>Preparation</h1>
 <p>For this lab you need to be reasonably comfortable with the command prompt + explorer - or finder/terminal on a Mac.</p>
-<p>We have reviewed these in the Harp lab.</p>
+<p>We have reviewed these in <a href="https://wit-hdip-comp-sci-2018.github.io/web-development/topic05-templating/book-01-harp/index.html">Lab05a</a> in the <a href="https://wit-hdip-comp-sci-2018.github.io/web-development/topic05-templating/index.html">Web Development Deployment Topic</a></p>
 <h2>Command Prompt</h2>
 <p>Recall, how you launch the command prompt: </p>
 <p><img src="img/01.png" alt=""></p>
@@ -375,7 +375,7 @@ brew cask install caskroom/versions/java8</code></pre>
 <p><img src="img/64.png" alt=""></p>
 <p>You could regard these two views as:</p>
 <ul>
-<li>Physical: the actual files in the project, included all generated and system files. This view more or less correspondes </li>
+<li>Physical: the actual files in the project, included all generated and system files. This view more or less corresponds to the Explorer/Finder view</li>
 <li>Logical: just the files that are significant to the programmer. This hides all non-editable files, and allows you to focus on just the project sources.</li>
 </ul>
 <p>In general, you will be happy to work with the Packages (logical) view. As you gain more experience, and the projects become more sophisticated, you may occasionally need to view the Project (physical) view.</p>
@@ -386,6 +386,8 @@ brew cask install caskroom/versions/java8</code></pre>
               <h1>Exercises</h1>
 <h2>Exercise 1:</h2>
 <p>Examine the Hello World project folder in Explore/Finder - and compare the contents with the view presented in Idea.</p>
+<h2>Exercise 2:</h2>
+<p>Create another new project - like Hello World - but give the project a different name. Get used to having more than one project open at a time.</p>
 
             </div>
           
