--- a/labwall.html
+++ b/labwall.html
@@ -1675,7 +1675,7 @@
     
   
     <div class="uk-card-footer">
-      <p> <p><code>The material covered in this &#39;lab&#39; is a prerequisite for the third assignment in this module.</code></p>
+      <p> <p>The material covered in this &#39;lab&#39; is a prerequisite for the third assignment in this module.</p>
 </p>
     </div>
   
