--- a/panelvideowall.html
+++ b/panelvideowall.html
@@ -19,6 +19,14 @@
   
   <div class="uk-background-muted uk-flex uk-flex-center uk-flex-middle uk-text-center uk-padding-small" uk-grid>
     
+  <div class="uk-padding">
+    <a href="#offcanvas-usage" uk-toggle
+      title="Table of Contents" pos="bottom" uk-tooltip>
+      <i class="fas fa-cogs fa-4x" style="color:#64dd17"></i>
+    </a>
+  </div>
+
+    
   <div class="uk-width-1-2@m  uk-card uk-card-default uk-padding-small">
     <h2>  Programming Fundamentals  </h2>
     <div class="uk-text-muted uk-text-small">
