--- a/topic04a-strings-and-intro-to-classes/index.html
+++ b/topic04a-strings-and-intro-to-classes/index.html
@@ -1651,7 +1651,7 @@ Lab-12
         <h2> 4a: Classes (Part 1)   </h2>
         <div class="uk-text-muted uk-text-small">
           
-            Colm Dunphy, Dr. Siobhan Drohan, Diarmuid O'Connor, Dr. Frank Walsh, WIT
+            Colm Dunphy, Dr. Siobhan Drohan, Diarmuid O'Connor, Dr. Frank Walsh, WIT.
           
         </div>
       </div>
